# neorg-analyzer

./: .gitignore  Cargo.toml  README.md  justfile  test.norg
.github/: rust.yml
.github/workflows/: ci.yml  release.yml
crates/lime-analyzer/: Cargo.toml
crates/lime-analyzer/src/: backend.rs  lib.rs  neorg_lang.rs  span.rs
crates/neorg-analyzer/: Cargo.toml
crates/neorg-analyzer/src/: backend.rs  lib.rs  main.rs  span.rs  types.rs
crates/neorg-analyzer/src/handle/: code_action.rs  diagnostics.rs  hover.rs  mod.rs  rename.rs
crates/neorg-lang/: Cargo.toml
crates/neorg-lang/src/: error.rs  kind.rs  lexer.rs  main.rs  parser.rs
crates/neorg-syntax/: Cargo.toml
crates/neorg-syntax/src/: format.rs  kind.rs  lexer.rs  lib.rs  main.rs  node.rs  nodes.rs  parse.rs  parser.rs  print.rs  scanner.rs  span.rs  validate.rs
crates/neorg-syntax/src/example/: 00.txt
examples/: sample.norg  test.norg
