
[workspace.package]
version = "0.1.0"
license = "MIT"
authors = ["Abhinandh S <abhinandhsuby@proton.me>"]
description = "A markdown laguage"
homepage = "https://github.com/abhinandh-s/neorg-lang"
documentation = "https://github.com/abhinandh-s/neorg-lang"
categories = ["command-line-utilities"]
keywords = ["cli", "tool", "utility"]

[workspace]
resolver = "2"

members = [
  "crates/*"
]

[workspace.dependencies]
languagetool-rust = "^2.1"
serde = { version = "1.0.217", features = ["derive"] }
anyhow = "1.0.95"
thiserror = "2.0.11"
dirs = "6.0.0"
ecow = "0.2.3"
nom = "8.0.0"
miette = { version = "7.4.0", features = [ "fancy" ]}
derive_more = { version = "2.0.1", default-features = false, features = ["from"] }
chrono = "0.4.39"
dashmap = "6.1.0"
env_logger = "0.11.6"
fontdb = "0.23.0"
hayagriva = "0.8.0"
itertools = "0.14.0"
oxc_index = "2.0.0"
serde_json = "1.0.134"
serde_yml = "0.0.12"
regex = "1.11.1"
ropey = "1.6.1"
# neorg-syntax = { git = "https://github.com/abhinandh-s/neorg-syntax", features = ["tower_lsp"] }
neorg-syntax = { path = "../neorg-syntax", features = ["tower-lsp"] }
tower-lsp = "0.20.0"
tokio = { version = "1.42.0", features = ["full"] }
tracing-subscriber = "0.3.19"
walkdir = "2.5.0"
unicode-segmentation = "1.12.0"

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = false

[workspace.lints.rust]
unsafe_code = "warn"
unused_labels = "allow"
unreachable_pub = "deny"

[workspace.lints.clippy]
perf = "deny"
unwrap_used = "deny"
expect_used = "deny"
or_then_unwrap = "deny"
panicking_unwrap = "deny"
get_unwrap = "deny"
enum_glob_use = "deny"
redundant_closure = "deny"
str_to_string = "deny"
