[package]
name = "neorg-analyzer"
edition = "2024"
version.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
neorg-syntax = { workspace = true, features = ["tower_lsp"] }
env_logger.workspace = true
ropey.workspace = true
anyhow.workspace = true
dashmap.workspace = true
dirs.workspace = true
ecow.workspace = true
itertools.workspace = true
oxc_index.workspace = true
serde.workspace = true
regex.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-lsp.workspace = true
tracing-subscriber.workspace = true 

[lints]
workspace = true
