[package]
name = "neorg-analyzer"
edition = "2024"
version.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
reqwest = { version = "0.12.22", default-features = false, features = ["json", "blocking", "rustls-tls"]}
neorg-syntax = { workspace = true, features = ["tower-lsp"] }
ropey.workspace = true
anyhow.workspace = true
dashmap.workspace = true
dirs.workspace = true
ecow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-lsp.workspace = true
tracing-subscriber.workspace = true 

[lints]
workspace = true
